Migrate to shadow-cljs